--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "node config/dev-server.js",
-    "build": "node config/build.js"
+    "build": "node config/build.js",
+    "e2e": "node test/e2e/runner.js"
   },
   "dependencies": {
     "vue": "^2.0.5",
@@ -24,7 +25,9 @@
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
+    "babel-register": "^6.18.0",
     "babel-runtime": "^5.8.38",
+    "chromedriver": "^2.25.1",
     "connect-history-api-fallback": "^1.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.25.0",
@@ -44,9 +47,11 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mockjs": "^1.0.1-beta3",
+    "nightwatch": "^0.9.8",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-loader": "^1.1.0",
+    "selenium-server": "^3.0.1",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
