--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "node test/e2e/runner.js"
   },
   "dependencies": {
-    "vue": "^2.0.7",
+    "vue": "^2.1.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0"
@@ -58,8 +58,9 @@
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
-    "vue-loader": "^9.9.5",
+    "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
