--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "e2e": "node test/e2e/runner.js"
   },
   "dependencies": {
+    "lodash": "^4.17.2",
     "vue": "^2.1.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
@@ -22,6 +23,7 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-lodash": "^3.2.10",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
@@ -47,6 +49,7 @@
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "lodash-webpack-plugin": "^0.10.6",
     "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.8",
     "opn": "^4.0.2",
