--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "634206017@qq.com"
   },
   "scripts": {
-    "dev": "node config/dev-server.js",
+    "dev": "cross-env NODE_ENV=dev supervisor -w config -i src config/dev-server.js",
     "build": "node config/build.js",
     "e2e": "node test/e2e/runner.js"
   },
@@ -33,6 +33,7 @@
     "connect-history-api-fallback": "^1.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.25.0",
+    "ejs-loader": "^0.3.0",
     "eslint": "^3.9.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.6",
@@ -55,6 +56,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-loader": "^1.1.0",
+    "reload": "^1.1.0",
     "selenium-server": "^3.0.1",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
