--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "vue-scaffold",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "author": {
     "name": "yusen",
     "email": "634206017@qq.com"
   },
   "scripts": {
-    "dev": "start http://localhost:3000 & cross-env NODE_ENV=dev supervisor -w config -i src config/dev-server.js",
-    "build": "node config/build.js",
-    "e2e": "node test/e2e/runner.js"
+    "dev": "start http://localhost:3000 & cross-env NODE_ENV=dev supervisor -w mock -i src build/dev-server.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "lodash": "^4.17.2",
-    "vue": "^2.1.0",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1",
-    "vuex": "^2.0.0"
+    "vue": "^2.2.4",
+    "vue-router": "^2.3.0",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.2",
@@ -27,9 +26,7 @@
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.18.0",
     "babel-runtime": "^5.8.38",
-    "chromedriver": "^2.25.1",
     "connect-history-api-fallback": "^1.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.25.0",
@@ -52,20 +49,18 @@
     "less-loader": "^2.2.3",
     "lodash-webpack-plugin": "^0.10.6",
     "mockjs": "^1.0.1-beta3",
-    "nightwatch": "^0.9.8",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-loader": "^1.1.0",
     "reload": "^1.1.0",
-    "selenium-server": "^3.0.1",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
-    "vue-loader": "^10.0.0",
+    "vue-loader": "^10.3.0",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.0",
+    "vue-template-compiler": "^2.2.4",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
