--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{less,json}]
+[*.{less,json,yml}]
 indent_size = 2
