--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^5.8.38",
+    "body-parser": "^1.17.1",
     "connect-history-api-fallback": "^1.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.25.0",
@@ -49,6 +50,7 @@
     "less-loader": "^2.2.3",
     "lodash-webpack-plugin": "^0.10.6",
     "mockjs": "^1.0.1-beta3",
+    "multiparty": "^4.1.3",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-loader": "^1.1.0",
